--- a/Gain/Builds/VisualStudio2015/resources.rc
+++ b/Gain/Builds/VisualStudio2015/resources.rc
@@ -13,9 +13,9 @@ BEGIN
   BEGIN
     BLOCK "040904E4"
     BEGIN
-      VALUE "FileDescription",  "Gain\0"
+      VALUE "FileDescription",  "VibratoOoOo\0"
       VALUE "FileVersion",  "1.0.0\0"
-      VALUE "ProductName",  "Gain\0"
+      VALUE "ProductName",  "VibratoOoOo\0"
       VALUE "ProductVersion",  "1.0.0\0"
     END
   END
